<resources>

    <string name="app_name">The Recipe Divider</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="enter_original_recipe">Enter Original Recipe</string>
    <string name="first_ingredient">1ST INGREDIENT</string>
    <string name="quantity">QUANTITY:</string>
    <string name="units_of_measure">UNITS OF MEASURE:</string>
    <string name="empty"></string>
    <string name="next_btn">Next</string>
    

</resources>