<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edede5"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:src="@drawable/header_bg" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="#800000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/enter_original_recipe"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:hint="@string/first_ingredient" 
            android:background="@drawable/input_field"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_lable"
                android:padding="7dp"
                android:text="@string/quantity"
                android:textColor="#FFFFFF"/>

            <EditText
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="2"
                android:background="@drawable/input_field"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_lable"
                android:padding="7dp"
                android:text="@string/units_of_measure"
                android:textColor="#FFFFFF" />

            <EditText
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/input_field"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#eae6d8" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#f1eeea" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_border"
        android:layout_margin="15dp" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_next"
            android:text="@string/next_btn"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>